# api-recommender-we

./: .gitignore  Makefile  README.md  pyproject.toml
api_recommendation/: main.py
api_recommendation/data/: dataset_info.txt
api_recommendation/data/test/: queries.json
api_recommendation/models/: endpoint.py  metadata.py
api_recommendation/tasks/: __init__.py  evaluate.py  extract.py  transform.py  utils.py
api_recommendation/trainers/: evaluation.py  train.py  train_fasttext.py  train_word2vec.py
