[tool.poetry]
name = "api-recommendation"
version = "0.1.0"
description = ""
authors = ["Ana Martínez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "api_recommendation"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.25.1"
nltk = ">=3.7,<4.0"
gensim = "^4.3.1"
spacy = "^3.5.0"
ray = {extras = ["tune"], version = "^2.7.1"}
numpy = "^1.25.1"
scikit-learn = ">=1.1.2,<1.2.0"
ruamel-yaml = "^0.18.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
